--- a/src/opentld/CMakeLists.txt
+++ b/src/opentld/CMakeLists.txt
@@ -50,7 +50,7 @@ if(BUILD_QOPENTLD)
     set(QOPENTLD_HEADERS qopentld/ConfigDialog.h)
     set(QOPENTLD_FORMS qopentld/ConfigDialog.ui)
     set(QOPENTLD_RCS ../../res/rcs.qrc)
-
+    find_package(Qt COMPONENTS Core Gui REQUIRED)
     QT4_ADD_RESOURCES(QOPENTLD_RCS_CPP ${QOPENTLD_RCS})
     QT4_WRAP_CPP(QOPENTLD_HEADERS_MOC ${QOPENTLD_HEADERS})
     QT4_WRAP_UI(QOPENTLD_FORMS_HEADERS ${QOPENTLD_FORMS})
